<resources>
    <string name="app_name">Calculator</string>
    <!-- Calculator buttons -->
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet...</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_0">0</string>
    <string name="button_0_description">Zero</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equals">=</string>
    <string name="button_clear">C</string>
    <string name="display_text">0</string>
</resources>