<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!-- Display TextView -->
    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/display_text"
        android:gravity="end"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button7"/>
    <!-- First Row: 7, 8, 9, Divide -->
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:text="@string/button_7"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintWidth_percent="0.25" />
    <Button
        android:id="@+id/button8"
        android:text="@string/button_8"
        app:layout_constraintTop_toTopOf="@id/button7"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/button9"
        android:text="@string/button_9"
        app:layout_constraintTop_toTopOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/buttonDivide"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/buttonDivide"
        android:text="@string/button_divide"
        app:layout_constraintTop_toTopOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_4"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintWidth_percent="0.25" />
    <Button
        android:id="@+id/button5"
        android:text="@string/button_5"
        app:layout_constraintTop_toTopOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/button6"
        android:text="@string/button_6"
        app:layout_constraintTop_toTopOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/buttonMultiply"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/buttonMultiply"
        android:text="@string/button_multiply"
        app:layout_constraintTop_toTopOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <!-- Third Row: 1, 2, 3, Minus -->
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_1"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintWidth_percent="0.25" />
    <Button
        android:id="@+id/button2"
        android:text="@string/button_2"
        app:layout_constraintTop_toTopOf="@id/button1"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/button3"
        android:text="@string/button_3"
        app:layout_constraintTop_toTopOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/buttonMinus"
        android:text="@string/button_minus"
        app:layout_constraintTop_toTopOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <!-- Fourth Row: 0, Clear (C), Equals (=), Plus (+) -->
    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button_0_description"
        android:text="@string/button_0"
        app:layout_constraintEnd_toStartOf="@id/buttonClear"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintWidth_percent="0.25" />
    <Button
        android:id="@+id/buttonClear"
        android:text="@string/button_clear"
        app:layout_constraintTop_toTopOf="@id/button0"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/buttonEquals"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_equals"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toTopOf="@id/buttonClear"
        app:layout_constraintWidth_percent="0.25" />
    <Button
        android:id="@+id/buttonPlus"
        android:text="@string/button_plus"
        app:layout_constraintTop_toTopOf="@id/buttonEquals"
        app:layout_constraintStart_toEndOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"/>
</androidx.constraintlayout.widget.ConstraintLayout>